objects/AcctSeed__Bank_Rule_Action__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Bank_Rule__c</fullName>
        <label>Bank Rule</label>
        <referenceTo>AcctSeed__Bank_Rule__c</referenceTo>
        <relationshipLabel>Bank Rule Actions</relationshipLabel>
        <relationshipName>Bank_Rule_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>AcctSeed__Target_Field__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Value__c</fullName>
        <label>Value</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <label>Bank Rule Action</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>